--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=${port:8083}
 
-spring.profiles.active=test
+spring.profiles.active=${APP_PROFILE:test}
 
 spring.jpa.open-in-view=false
