--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,7 @@
 {
+  "resolution": {
+    "autoprefixer": "10.4.5"
+  },
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +14,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "5.3.2",
+    "autoprefixer": "10.4.5",
+    "axios": "0.24.0",
     "bootstrap": "5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
